<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/general_margin"
    tools:context="com.example.theopsyphertxt.ribbit.LoginActivity">

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_username"
        android:layout_marginBottom="74dp"
        android:layout_above="@+id/userPassword"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_marginBottom="48dp"
        android:layout_above="@+id/btnLogin"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:layout_above="@+id/txtSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp" />

    <TextView
        android:id="@+id/txtSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_signup"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp" />

</RelativeLayout>
