<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/general_margin"
    tools:context="com.example.theopsyphertxt.ribbit.SignUpActivity">

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_username"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_below="@id/userName"
        android:layout_marginTop="22dp"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:layout_below="@id/userPassword"
        android:layout_marginTop="33dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_signup"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
